--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   fluttertoast: ^8.2.6
   google_fonts: ^6.2.1
-  persistent_bottom_nav_bar: ^5.0.2
+  persistent_bottom_nav_bar_plus: ^5.1.1
+  chewie_audio: ^1.5.0
 
 dev_dependencies:
   flutter_test:
