--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -9,6 +9,7 @@
 # packages, and plugins designed to encourage good coding practices.
 analyzer:
   errors:
+    library_private_types_in_public_api: ignore
     prefer_const_constructors: ignore ignore ignore ignore
     prefer_const_constructors_in_immutables: ignore
     use_key_in_widget_constructors: ignore
