--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   heart_bpm: ^2.0.0+0
   percentages_with_animation: ^0.0.9
   camera: ^0.10.5+5
+  table_calendar: ^3.1.2
+  syncfusion_flutter_calendar: ^26.2.5
 
 dev_dependencies:
   flutter_test:
