--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -28,8 +28,11 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<!-- Other keys and values -->
 	<key>NSCameraUsageDescription</key>
-	<string>This app requires access to the camera to monitor heart rate.</string>
+	<string>This app requires access to the camera for heart rate monitoring.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>This app requires access to the microphone for heart rate monitoring.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
