--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,10 +45,16 @@ dependencies:
   table_calendar: ^3.1.2
   syncfusion_flutter_calendar: ^26.2.5
   wakelock_plus: ^1.2.7
-  flutter_svg: ^2.0.10+1
   fl_chart: ^0.68.0
   torch_controller: ^2.0.1
   share: ^2.0.4
+  shared_preferences: ^2.3.1
+  provider: ^6.1.2
+  path_provider: ^2.1.4
+  flutter_circular_progress_indicator: ^0.0.3
+  percent_indicator: ^4.2.3
+  tflite: ^1.1.2
+  tflite_flutter: ^0.10.4
 
 dev_dependencies:
   flutter_test:
