--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,8 +53,9 @@ dependencies:
   path_provider: ^2.1.4
   flutter_circular_progress_indicator: ^0.0.3
   percent_indicator: ^4.2.3
-  tflite: ^1.1.2
-  tflite_flutter: ^0.10.4
+  sensors: ^2.0.3
+  url_launcher: ^6.3.0
+
 
 dev_dependencies:
   flutter_test:
