--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,12 +56,13 @@ dependencies:
   sensors: ^2.0.3
   url_launcher: ^6.3.0
   firebase_database: ^10.4.0
-  firebase_auth: ^4.16.0
   firebase_core: ^2.24.2
   loading_indicator: ^3.1.1
   cloud_functions: ^4.6.0
   intl: ^0.19.0
   flutter_datetime_picker: ^1.5.1
+  firebase_auth: ^4.16.0
+  animated_custom_dropdown: ^3.1.1
 
 
 dev_dependencies:
